fix: ensure consistent min-height for pulse-button-wrap

--- a/src/app/features/landing/ui/vote-button/vote-button.component.scss
+++ b/src/app/features/landing/ui/vote-button/vote-button.component.scss
@@ -13,6 +13,7 @@
 .pulse-button-wrap {
     position: relative;
     flex-grow: 1;
+    min-height: 60px;
 
     @include media-2xs {
         min-height: 60px;
